--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@coreui/react": "^5.1.0",
     "@types/better-sqlite3": "^7.6.11",
     "antd": "^5.19.0",
-    "axios": "^1.7.2",
     "better-sqlite3": "^11.1.2",
     "compression": "^1.7.4",
     "drizzle-kit": "^0.22.8",
@@ -22,9 +21,11 @@
     "express": "^4.19.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "sirv": "^2.0.4",
     "sqlite3": "^5.1.7",
+    "sweetalert2": "^11.12.2",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
